<resources>
    <string name="app_name">Filmster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">FILMSTER</string>
    <string name="watchlist">Watchlist</string>
    <string name="preferences">Preferences</string>
    <string name="movieTitle">The bourne identity</string>
    <string name="movieRating">9.5/10</string>
    <string name="imdbRating">IMDB Rating</string>
    <string name="About">About</string>
    <string name="movieYear">2008</string>
    <string name="likeDiscription">2008</string>
    <string name="dislikeDiscription">2008</string>
    <string name="seenDiscription">2008</string>
    <string name="movie">Elite film</string>
    <string name="likedMovies">Liked</string>
    <string name="missedMovies">Missed</string>
    <string name="watchedMovies">Watched</string>
    <string name="add">Add</string>
    <string name="genres">Genres</string>
    <string name="actors">Actors</string>
    <string name="directors">Directors</string>
    <string name="titleBack">TextView</string>
    <string name="ratingBack">TextView</string>
    <string name="yearBack">TextView</string>
    <string name="name">name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Create">Create An Account</string>

</resources>