<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260sp"
    android:layout_height="340sp"
    tools:context="com.filmster.application.view.MediaCardBackView"
    android:background="@drawable/layout_border">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="260sp"
        android:layout_height="340sp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="17dp"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/aboutRating"
            app:layout_constraintTop_toBottomOf="@+id/aboutText"
            app:srcCompat="@drawable/ic_baseline_star_24" />

        <TextView
            android:id="@+id/aboutParagraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck"
            tools:text="@string/About" />

        <TextView
            android:id="@+id/aboutText"
            android:layout_width="207dp"
            android:layout_height="166dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="37dp"
            android:text="@string/actors"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutParagraph" />

        <TextView
            android:id="@+id/aboutYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="90dp"
            android:text="@string/movieYear"
            app:layout_constraintEnd_toStartOf="@+id/aboutRating"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutText" />

        <TextView
            android:id="@+id/aboutRating"
            android:layout_width="57dp"
            android:layout_height="19dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="50dp"
            android:text="@string/movieRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/aboutYear"
            app:layout_constraintTop_toBottomOf="@+id/aboutText" />

        <TextView
            android:id="@+id/aboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="87dp"
            android:text="@string/movieTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/aboutParagraph"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>