<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0sp"
        android:layout_marginTop="0sp"
        android:layout_marginRight="0sp">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/mediaImageSmall"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:contentDescription="@string/movieTitle"
            android:src="@drawable/jason_bourne"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/jason_bourne" />


        <TextView
            android:id="@+id/mediaTitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/movieTitle"
            app:layout_constraintStart_toEndOf="@+id/mediaImageSmall"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mediaYearSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/movieYear"
            app:layout_constraintStart_toEndOf="@+id/mediaTitleSmall"
            app:layout_constraintTop_toBottomOf="@+id/mediaTitleSmall" />

        <TextView
            android:id="@+id/mediaRatingSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/movieRating"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mediaTitleSmall" />

        <ImageView
            android:id="@+id/imdbstar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mediaRatingSmall"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>